Update Problem Solver achievement to focus on Rocky Mountain work
- Changed from Smart Teacher Connect reference to Rocky Mountain Chocolate Factory
- Highlights chatbot development and AI-driven content solutions
- Focuses on retail marketing and customer service automation
- Better represents current technical problem-solving skills

--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
             <div class="achievement-card">
                 <div class="achievement-icon">🎯</div>
                 <div class="achievement-title">Problem Solver</div>
-                <div class="achievement-desc">Built recruitment platform connecting teachers globally (Smart Teacher Connect - now offline)</div>
+                <div class="achievement-desc">Developed custom chatbot prototype and AI-driven content solutions to streamline customer service and social media operations for retail marketing</div>
             </div>
         </div>
 
