Add AI and Crypto interest cards to About Me section
- Added AI Enthusiast & Innovator card highlighting AI/ML passion
- Added Crypto & DeFi Explorer card showcasing Solana and BSC knowledge
- Expanded About Me from 4 to 6 cards for more comprehensive profile
- Maintains consistent design with robot and chain link emojis

--- a/index.html
+++ b/index.html
@@ -686,6 +686,16 @@
                 <div class="achievement-title">Multi-Industry Translator</div>
                 <div class="achievement-desc">Successfully bridges traditional education, cutting-edge technology, and spiritual wisdom - translating complex concepts across completely different domains and worldviews</div>
             </div>
+            <div class="achievement-card">
+                <div class="achievement-icon">🤖</div>
+                <div class="achievement-title">AI Enthusiast & Innovator</div>
+                <div class="achievement-desc">Passionate about artificial intelligence and machine learning applications. Actively exploring AI-driven automation, content generation, and emerging technologies to solve real-world business challenges</div>
+            </div>
+            <div class="achievement-card">
+                <div class="achievement-icon">⛓️</div>
+                <div class="achievement-title">Crypto & DeFi Explorer</div>
+                <div class="achievement-desc">Active cryptocurrency trader and DeFi enthusiast with deep knowledge of Solana and Binance Smart Chain ecosystems. Passionate about Web3 innovation and blockchain technology's potential to revolutionize finance</div>
+            </div>
         </div>
     </section>
 
