Add 2 more core strengths to achievements section
- Added Digital Workflow Optimization highlighting AI automation skills
- Added Adaptable Communication showcasing audience versatility
- Expanded from 4 to 6 core strengths for comprehensive profile
- Emphasizes practical business skills and communication flexibility

--- a/index.html
+++ b/index.html
@@ -824,6 +824,14 @@
                 <div class="achievement-title">Rapid Self-Learning</div>
                 <div class="achievement-desc">Transitioned from education to AI-driven marketing and social media management, mastering new technologies quickly</div>
             </div>
+            <div class="achievement-card">
+                <div class="achievement-title">Digital Workflow Optimization</div>
+                <div class="achievement-desc">Expert at streamlining processes using AI tools and automation, reducing manual tasks while maintaining high-quality output across multiple platforms</div>
+            </div>
+            <div class="achievement-card">
+                <div class="achievement-title">Adaptable Communication</div>
+                <div class="achievement-desc">Skilled at adjusting communication style for different audiences - from teaching children to collaborating with international teams and creating content for diverse markets</div>
+            </div>
         </div>
     </section>
 
