Add 2 more interesting achievements to Key Achievements section
- Added Digital Nomad Pioneer highlighting location-independent success
- Added Cultural Code-Switcher showcasing East-West integration skills
- Expanded from 4 to 6 key achievements for richer profile
- Emphasizes unique lifestyle and cultural navigation abilities

--- a/index.html
+++ b/index.html
@@ -804,6 +804,16 @@
                 <div class="achievement-title">Problem Solver</div>
                 <div class="achievement-desc">Developed custom chatbot prototype and AI-driven content solutions to streamline customer service and social media operations for retail marketing</div>
             </div>
+            <div class="achievement-card">
+                <div class="achievement-icon">🌅</div>
+                <div class="achievement-title">Digital Nomad Pioneer</div>
+                <div class="achievement-desc">Successfully built a location-independent career spanning multiple time zones, working with US companies while pursuing Buddhist studies in Thailand - mastering the art of work-life balance</div>
+            </div>
+            <div class="achievement-card">
+                <div class="achievement-icon">🎭</div>
+                <div class="achievement-title">Cultural Code-Switcher</div>
+                <div class="achievement-desc">Fluently navigates between Eastern mindfulness practices and Western business efficiency, creating unique hybrid approaches to problem-solving and team collaboration</div>
+            </div>
         </div>
 
         <h3 style="text-align: center; margin: 3rem 0 2rem; color: #00ff88; font-size: 2rem;">Core Strengths</h3>
